card main setting

--- a/index.html
+++ b/index.html
@@ -78,9 +78,15 @@
             <!-- end of sidebar -->
         </aside>
         <div class="main">
-            <h1>ini main</h1>
+            <h1>Dashboard</h1>
+            <div class="card">
+                <div class="total-sales">total sales</div>
+                <div class="total-expense">total expense</div>
+                <div class="total-income">total income</div>
+            </div>
+            
         </div>
-        <div class="rightSidebar">
+        <div class="right-sidebar">
             <h1>sidebar kanan</h1>
         </div>
         <!-- end of logo dan sidebar -->
