setting logo card

--- a/index.html
+++ b/index.html
@@ -80,7 +80,18 @@
         <div class="main">
             <h1>Dashboard</h1>
             <div class="card">
-                <div class="total-sales">total sales</div>
+                <div class="total-sales">
+                    <div class="data">
+                        <!-- <div>
+                            <span class="material-symbols-outlined">analytics</span>
+                            
+                        </div> -->
+                        <svg>
+                            <circle cx="50%" cy="50%" r="20"  >test</circle>
+                        </svg>
+                    </div>
+
+                </div>
                 <div class="total-expense">total expense</div>
                 <div class="total-income">total income</div>
             </div>
@@ -88,6 +99,7 @@
         </div>
         <div class="right-sidebar">
             <h1>sidebar kanan</h1>
+
         </div>
         <!-- end of logo dan sidebar -->
     </div>
