setting card icon

--- a/index.html
+++ b/index.html
@@ -86,9 +86,8 @@
                             <span class="material-symbols-outlined">analytics</span>
                             
                         </div> -->
-                        <svg>
-                            <circle cx="50%" cy="50%" r="20"  >test</circle>
-                        </svg>
+                        <img src="./asset/analytics.svg" alt="">
+                        
                     </div>
 
                 </div>
