--- a/index.html
+++ b/index.html
@@ -82,12 +82,9 @@
             <div class="card">
                 <div class="total-sales">
                     <div class="data">
-                        <!-- <div>
-                            <span class="material-symbols-outlined">analytics</span>
-                            
-                        </div> -->
-                        <img src="./asset/analytics.svg" alt="">
-                        
+                        <div>
+                            <img src="./asset/analytics.svg" alt="">
+                        </div>
                     </div>
 
                 </div>
@@ -98,7 +95,6 @@
         </div>
         <div class="right-sidebar">
             <h1>sidebar kanan</h1>
-
         </div>
         <!-- end of logo dan sidebar -->
     </div>
