--- a/index.html
+++ b/index.html
@@ -81,12 +81,14 @@
             <h1>Dashboard</h1>
             <div class="card">
                 <div class="total-sales">
-                    <div class="data">
-                        <div>
-                            <img src="./asset/analytics.svg" alt="">
-                        </div>
-                    </div>
-
+                    <img src="./asset/analytics.svg" alt="">
+                    <h2>Total Sales</h2>
+                    <h3>Rp. 2.500.000,00</h3>
+                    
+                        <svg id="sales" width="150" height="150" viewBox="0 0 150 150" style="transform: rotate(-120deg)">
+                            <circle r="50" cx="75" cy="75"/>
+                        </svg>
+                    
                 </div>
                 <div class="total-expense">total expense</div>
                 <div class="total-income">total income</div>
