--- a/index.html
+++ b/index.html
@@ -81,35 +81,36 @@
             <h1>Dashboard</h1>
             <div class="card">
                 <div class="data">
-                    <div>
-                    <img src="./asset/analytics.svg" alt="">
+                    <div class="Sales">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M280-280h80v-200h-80v200Zm320 0h80v-400h-80v400Zm-160 0h80v-120h-80v120Zm0-200h80v-80h-80v80ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"/></svg>
                     <h2>Total Sales</h2>
                     <h3>Rp. 2.500.000,00</h3>
                     </div>
-                    <svg id="percent" width="150" height="150" viewBox="0 0 150 150" style="transform: rotate(-120deg)">
-                        <circle r="50" cx="75" cy="75"/>
+                    <svg id="Sales" width="150" height="150" viewBox="0 0 150 150" style="transform: rotate(-120deg)">
+                        <circle r="30" cx="75" cy="75"/>
                     </svg>
                 </div>
 
                 <div class="data">
-                    <div>
-                    <img src="./asset/analytics.svg" alt="">
+                    <div class="expense">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M640-160v-280h160v280H640Zm-240 0v-640h160v640H400Zm-240 0v-440h160v440H160Z"/></svg>
                     <h2>Total Sales</h2>
                     <h3>Rp. 2.500.000,00</h3>
                     </div>
-                    <svg id="percent" width="150" height="150" viewBox="0 0 150 150" style="transform: rotate(-120deg)">
-                        <circle r="50" cx="75" cy="75"/>
+                    <svg id="expense" width="150" height="150" viewBox="0 0 150 150" style="transform: rotate(-120deg)">
+                        <circle r="30" cx="75" cy="75"/>
                     </svg>
                 </div>
 
                 <div class="data">
-                    <div>
-                    <img src="./asset/analytics.svg" alt="">
+                    <div class="income">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M480-120 232-360l-112 80v-98l120-86 245 238 167-134h188v80H680L480-120Zm0-360L305-655 120-520v-99l193-141 175 175 352-255v99L480-480Z"/></svg>
                     <h2>Total Sales</h2>
                     <h3>Rp. 2.500.000,00</h3>
                     </div>
-                    <svg id="percent" width="150" height="150" viewBox="0 0 150 150" style="transform: rotate(-120deg)">
-                        <circle r="50" cx="75" cy="75"/>
+                    <svg id="income" width="150" height="150" viewBox="0 0 150 150">
+                        <circle r="30" cx="75" cy="75"/>
+                        <text x="50%" y="50%" text-anchor="middle" font-weight="bold">75%</text>
                     </svg>
                 </div>
                 
