--- a/index.html
+++ b/index.html
@@ -128,9 +128,14 @@
 
             <div class="detail">
                 <h2>Daftar Product</h2>
-                <table>
+                <table id="product">
                     <thead>
-                    <tr><th>Product ID</th><th>Category</th><th>Sub-Category</th><th>Product Name</th></tr>
+                    <tr>
+                        <th>Product ID</th>
+                        <th>Category</th>
+                        <th>Sub-Category</th>
+                        <th>Product Name</th>
+                    </tr>
                     </thead>
                     <tbody>
                     <tr><td>FUR-BO-10001798</td><td>Furniture</td><td>Bookcases</td><td>Bush Somerset Collection Bookcase</td></tr>
@@ -246,5 +251,6 @@
         </div>
         <!-- end of logo dan sidebar -->
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
