use import javascript file

--- a/index.html
+++ b/index.html
@@ -152,6 +152,6 @@
         </div>
         <!-- end of logo dan sidebar -->
     </div>
-    <script src="./script.js"></script>
+    <script src="./main.js" type="module"></script>
 </body>
 </html>
