insert logo gagal src

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
              <!-- logo perusahaan -->
             <div class="top">
                 <div class="logo">
-                    <img src="./asset/Risoles.png" alt="wulan kitchen">
-                    <div class="company-title">
+                    <!-- <img src="./asset/Risoles.png" alt="wulan kitchen"> -->
+                    <!-- <div class="company-title">
                         <h2>Wulan's</h2>
                         <div class="line-title"></div>
                         <span>kitchen</span>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="close" id="closeBtn"></div>
             </div>
