--- a/index.html
+++ b/index.html
@@ -16,17 +16,7 @@
        <!-- logo dan sidebar -->
         <aside>
              <!-- logo perusahaan -->
-            <div class="top">
-                <div class="logo">
-                    <!-- <img src="./asset/Risoles.png" alt="wulan kitchen"> -->
-                    <!-- <div class="company-title">
-                        <h2>Wulan's</h2>
-                        <div class="line-title"></div>
-                        <span>kitchen</span>
-                    </div> -->
-                </div>
-                <div class="close" id="closeBtn"></div>
-            </div>
+            <div class="top"></div>
             <!-- end of logo perusahaan-->
             <!-- sidebar -->
             <div class="sidebar">
