logo dan sidebar javascript revisi

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
        <!-- logo dan sidebar -->
         <aside>
              <!-- logo perusahaan -->
-            <div class="top"></div>
+            <div class="top">
+                
+            </div>
+            
             <!-- end of logo perusahaan-->
             <!-- sidebar -->
             <div class="sidebar">
