--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <div class="card">
                 <div class="data">
                     <div class="Sales">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M280-280h80v-200h-80v200Zm320 0h80v-400h-80v400Zm-160 0h80v-120h-80v120Zm0-200h80v-80h-80v80ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"/></svg>
+                    <span class="material-symbols-outlined">
+                            analytics
+                            </span>
                     <h2>Total Sales</h2>
                     <h3>Rp. 2.500.000</h3>
                     </div>
@@ -45,7 +47,7 @@
 
                 <div class="data">
                     <div class="expense">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M640-160v-280h160v280H640Zm-240 0v-640h160v640H400Zm-240 0v-440h160v440H160Z"/></svg>
+                    <img src="./asset/expense.svg" alt="" class="svg-icon">
                     <h2>Total Sales</h2>
                     <h3>Rp. 2.500.000</h3>
                     </div>
@@ -60,7 +62,7 @@
 
                 <div class="data">
                     <div class="income">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M480-120 232-360l-112 80v-98l120-86 245 238 167-134h188v80H680L480-120Zm0-360L305-655 120-520v-99l193-141 175 175 352-255v99L480-480Z"/></svg>
+                    <img src="./asset/income.svg" alt="" class="svg-icon">
                     <h2>Total Sales</h2>
                     <h3>Rp. 2.500.000</h3>
                     </div>
