card icon setting

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h2>Total Sales</h2>
                     <h3>Rp. 2.500.000</h3>
                     </div>
-                   <img src="./asset/percent1.svg" alt="">
+                   <img src="./asset/percent1.svg" alt="" class="percent">
                             
                 </div>
 
