--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 
                 <div class="data">
                     <div class="expense">
-                    <img src="./asset/expense.svg" alt="" class="svg-icon">
+                        <span class="material-symbols-outlined">
+                            bar_chart
+                            </span>
                     <h2>Total Sales</h2>
                     <h3>Rp. 2.500.000</h3>
                     </div>
@@ -62,7 +64,9 @@
 
                 <div class="data">
                     <div class="income">
-                    <img src="./asset/income.svg" alt="" class="svg-icon">
+                        <span class="material-symbols-outlined">
+                            chart_data
+                            </span>
                     <h2>Total Sales</h2>
                     <h3>Rp. 2.500.000</h3>
                     </div>
